@@ -3,11 +3,15 @@ package br.com.metaway.petshop.services;
 import java.math.BigInteger;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.CachePut;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import br.com.metaway.petshop.models.Pet;
@@ -55,17 +59,18 @@ public class VisitService {
 				             savedVisit.getCurrency());
 	}
 	
-	@Cacheable(value = "allVisits") 
-	public List<VisitData> getAll() {
-		List<Visit> visits = repository.findAll();
-		List<VisitData> visitsData = visits.stream()
-											.map(visit -> new VisitData(visit.getId(),
-				                                                        visit.getPet().getId(),
-		                                                                visit.getDate(),
-		                                                                visit.getDescription(),
-		                                                                visit.getValue(),
-		                                                                visit.getCurrency())).toList();
-		return visitsData;
+	@Cacheable(value = "allVisits")
+	public Page<VisitData> getAll(Pageable pageable) {
+	    Page<Visit> visitsPage = repository.findAll(pageable);
+	    List<VisitData> visitsData = visitsPage.getContent().stream()
+	            .map(visit -> new VisitData(visit.getId(),
+	                    visit.getPet().getId(),
+	                    visit.getDate(),
+	                    visit.getDescription(),
+	                    visit.getValue(),
+	                    visit.getCurrency()))
+	            .collect(Collectors.toList());
+	    return new PageImpl<>(visitsData, visitsPage.getPageable(), visitsPage.getTotalElements());
 	}
 	
 	@Cacheable(value = "visitById", key = "#id")
